# gcrack

./: .gitignore  404.html  NOTICE  README.md  display_results.py  gcrack.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: conda_package.yml  deploy_documentation.yml  deploy_pypi_package.yml
API/LEFM/: index.html
API/SIF/: index.html
API/boundary_conditions/: index.html
API/domain/: index.html
API/exporters/: index.html
API/gcrack/: index.html
API/models/: index.html
API/optimization_solvers/: index.html
API/postprocess/: index.html
API/solvers/: index.html
docs/: .gitignore  README.md  code_audit_findings_2026-02-25.md  export_mesh_to_file.md  index.md  parallel_simulations.md
docs/API/: LEFM.md  SIF.md  boundary_conditions.md  domain.md  exporters.md  gcrack.md  models.md  optimization_solvers.md  postprocess.md  solvers.md
docs/source/: conf.py  index.rst
docs/tools/: display_wulff_diagram.md  index.md
examples/: .gitignore
examples/00_SENT_test_KI_calculation/: empirical_K_I.py  run.py
examples/01_SEN_specimen_in_tension/: run.py
examples/02_SEN_specimen_as_DCB/: run.py
examples/03_SEN_specimen_in_shear/: display_results.py  run.py
examples/04_SEN_specimen_in_force_tension/: run.py
examples/05_SCB_specimen_mixed_mode/: run.py
examples/06_Mixed_mode_Rethore_2018/: run.py
examples/07_Single_Edge_Cracked_Circular_test/: run.py
examples/08_SENT_spatial_bc/: run.py
examples/09_SENT_with_prescribed_bcs/: run.py
examples/0_SENT_test_KI_calculation/: run.py
examples/10_incremental_load/: run.py
examples/11_SIF_CTT/: display_results.py  run.py
examples/11_cantilever_beam_under_gravity_load/: verification_with_analytical_solution.py
examples/12_cantilever_beam_under_gravity_load/: run.py
examples/13_cantilever_beam_under_varying_body_force/: run.py
export_mesh_to_file/: index.html
parallel_simulations/: index.html
search/: search_index.json
tests/: test_sif.py  verify_kinked_crack_SIFS.py
tools/: index.html
(+126 files in other folders)
