[project]
name = "gcrack"
version = "2026.01.26"
authors = [
  { name="Flavien Loiseau", email="flavien.loiseau@ensta.fr" },
]
description = "Solver for Linear Elastic Fracture Mechanics problems "
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10.0"
# dependencies = [
#   "numpy",
#   "jax",
#   "sympy",
#   "pyvista",
#   "gmsh",
#   "fenics-dolfinx",
#   "fenics-ufl",
# ]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project.scripts]
gcrack-wulf-plotter="gcrack.tools.display_wulff_diagram:main"
gcrack-displacement-plotter="gcrack.tools.display_displacement:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gcrack*", "gcrack.utils*", "gcrack.tools*"]
